--- a/css/info.css
+++ b/css/info.css
@@ -9,28 +9,32 @@
 body {
   min-height: 100vh;
   background: #afc8cc;
+}
+.page{
+   min-height: calc(100vh - 60px);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/* 📦 Wrapper */
+/*  Wrapper */
 .instruction-wrapper {
   width: 100%;
   padding: 20px;
 }
 
-/* 🧾 Card */
+/*  Card */
 .instruction-card {
   max-width: 900px;
   margin: auto;
   background: #ffffff;
+  font-size:20px;
   padding: 35px 45px;
   border-radius: 16px;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.08);
 }
 
-/* 📝 Headings */
+/* Headings */
 .instruction-card h2 {
   text-align: center;
   color: #1f4d3a;
@@ -44,11 +48,12 @@ body {
   margin-bottom: 30px;
 }
 
-/* 🧩 Grid layout */
+/*  Grid layout */
 .info-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  font-size:22px;
 }
 
 .info-grid h4 {
@@ -56,7 +61,7 @@ body {
   margin-bottom: 10px;
 }
 
-/* 📄 Lists */
+/*  Lists */
 ul {
   padding-left: 20px;
   line-height: 1.8;
@@ -66,9 +71,10 @@ ul {
 /* 📌 Bottom rules */
 .bottom-rules {
   margin-top: 25px;
+   font-size:22px;
 }
 
-/* ▶ Button */
+/* Button */
 .start-btn {
   display: block;
   margin: 35px auto 0;
@@ -76,6 +82,7 @@ ul {
   font-size: 16px;
   background: #2e7d62;
   color: white;
+   font-size:22px;
   border: none;
   border-radius: px;
   cursor: pointer;
