--- a/css/selection.css
+++ b/css/selection.css
@@ -1,3 +1,22 @@
+html, body {
+    height: 100%;
+}
+
+.layout {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    flex: 1;                  /* pushes footer down */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 20px;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -33,9 +52,9 @@
 } */
 .nav-links {
     display: flex;
-    gap: 50px;
-    justify-content: flex-end;
+    gap: 30px;
 }
+
 .nav-links a {
     font-size: 20px;
     font-weight: 600;
@@ -69,7 +88,8 @@ body {
 
 .page {
     max-width: 900px;
-    margin: 40px auto;        /* centers horizontally */
+    width: calc(100% - 40px);
+    margin: 40px auto;
     background: #ffffff;
     padding: 40px;
     border-radius: 12px;
@@ -95,18 +115,16 @@ body {
 
 .option-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     gap: 24px;
-    margin-top: 10px;
 }
-
 
 .option-row {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 24px;
-    margin-top: 10px;
 }
+
 
 
 .option-card {
@@ -125,6 +143,9 @@ body {
     /* background: #35687e; */
     color: #020b16;
     border-color: #b0d9dd;
+
+    outline: none;
+    appearance: none;
 }
 
 
@@ -162,6 +183,7 @@ body {
     font-weight: 500;
     box-shadow: 0 6px 15px rgba(30,136,229,0.3);
     transition: 0.3s;
+    border: 2px solid #118e68;
 }
 
 .start-btn:hover {
@@ -173,8 +195,9 @@ body {
     background-color: #1e3a5f;
     color: #ffffff;
     padding: 15px 40px;
-     margin-top: 111px; 
+    margin-top: auto;
 }
+
 
 .footer-content {
     display: flex;
@@ -197,3 +220,15 @@ body {
 .footer-links a:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 1024px) {
+    .nav-links {
+        gap: 20px;
+    }
+
+    .page {
+        padding: 30px;
+    }
+}
+
+
